--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "draft-js": "^0.10.5",
+    "particles.js": "^2.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-draggable": "^3.0.5",
@@ -29,6 +30,7 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "webpack-cli": "^3.3.2"
   }
 }
