--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
-    "styling": "sass --watch ./app/assets/stylesheets/main.scss:./app/assets/stylesheets/style.css"
+    "build": "webpack",
+    "styling": "sass --watch ./app/assets/stylesheets/main.scss:./app/assets/stylesheets/style.css --style compressed"
   },
   "author": "",
   "license": "ISC",
